CustomErrorMessage enum 파일 추가 및 Service 파일에 반영